# Loggerhead

./: .gitignore  .travis.yml  CMakeLists.txt  PackagesList.cmake  ProjectName.cmake  README.rst  TPLsList.cmake  Version.cmake
cmake/: BOTG_INCLUDE.cmake
src/: CMakeLists.txt  Version.cmake  demo.cc
src/cmake/: Dependencies.cmake
src/spdlog/: progress_logger.hh  progress_logger.i.hh
src/spdlog/sinks/: progress_sink.cc  progress_sink.hh  progress_sink.i.hh
src/spdlog/test/: CMakeLists.txt  tstprogress_logger.cc
src/term/: color.cc  color.hh  info.cc  info.hh  progress_bar.cc  progress_bar.hh  progress_calculator.cc  progress_calculator.hh
src/term/test/: CMakeLists.txt  tstcolor.cc  tstinfo.cc  tstprogress_bar.cc  tstprogress_calculator.cc
src/test/: CMakeLists.txt  tstDemo.cc  tstDemo.f90
